ui alignment fixed

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -30,7 +30,9 @@ body {
 }
 
 .message {
+    text-align: left;
     display: flex;
+    flex-direction: column;
     margin-bottom: 20px;
     max-width: 75%;
     padding: 15px 20px;
@@ -39,6 +41,7 @@ body {
     font-size: 16px;
     word-wrap: break-word;
     line-height: 1.6;
+    margin-left: 4.5vw;
 }
 
 .message.sent {
@@ -46,6 +49,7 @@ body {
     background-color: #6c5ce7;
     color: #fff;
     border-bottom-right-radius: 0;
+    height: fit-content;
 }
 
 .message.received {
@@ -60,13 +64,15 @@ body {
     font-size: 12px;
     margin-bottom: 5px;
     color: #888;
+    height: fit-content;
 }
 
 .message img {
     max-width: 100%;
-    border-radius: 10px;
+    border-radius: 20px;
     margin-top: 10px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+   
 }
 
 .chatbox {
@@ -76,6 +82,7 @@ body {
     padding: 15px 20px;
     border-top: 1px solid #e0e0e0;
     box-shadow: 0px -5px 10px rgba(0, 0, 0, 0.05);
+ 
 }
 
 input[type="text"] {
@@ -101,16 +108,16 @@ label[for="file-upload"] {
 }
 
 .send-button {
-    background-color: #6c5ce7;
+    background-color: transparent;
     border: none;
-    color: white;
+    color: #6c5ce7;
     padding: 12px 20px;
     border-radius: 50px;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 15px;
     transition: all 0.3s ease;
 }
 
-.send-button:hover {
-    background-color: #574b90;
+.fromlabel{
+    height: fit-content;
 }
